--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Masjid Darul Muflihin NTI</title>
     <link href="./output.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <script src="../assets/app.js"></script>
+    <script src="./assets/masjid.jpg"></script>
 </head>
 
 <body class="bg-gray-50">
@@ -16,7 +16,7 @@
         <div class="max-w-7xl mx-auto px-4 py-3 flex justify-between items-center">
             <div class="flex items-center space-x-3">
                 <div class="w-10 h-10 rounded-full bg-blue-400 flex items-center justify-center">
-                <i class="fas fa-mosque text-white"></i>
+                    <i class="fas fa-mosque text-white"></i>
                 </div>
                 <h1 class="text-xl font-bold text-blue-400">Masjid Darul Muflihin NTI</h1>
             </div>
@@ -57,7 +57,7 @@
             </div>
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <div>
-                    <img src="../assets/masjid.jpg" alt="Masjid Darul Muflihin NTI" class="rounded-lg shadow-lg w-full">
+                    <img src="./assets/masjid.jpg" alt="Masjid Darul Muflihin NTI" class="rounded-lg shadow-lg w-full">
                 </div>
                 <div>
                     <p class="text-gray-600 leading-relaxed mb-6">
@@ -119,14 +119,18 @@
             <div class="max-w-7xl mx-auto">
                 <div class="flex flex-row gap-2">
                     <div class="w-full h-96 flex-1 hover:scale-102 relative">
-                        <a href="https://www.youtube.com/watch?v=EoRrJaGSGUk" target="_blank" class="block w-full h-full">
-                            <img src="https://img.youtube.com/vi/EoRrJaGSGUk/hqdefault.jpg" alt="Thumbnail" class="w-full h-full object-cover rounded-lg">
-                            
+                        <a href="https://www.youtube.com/watch?v=EoRrJaGSGUk" target="_blank"
+                            class="block w-full h-full">
+                            <img src="https://img.youtube.com/vi/EoRrJaGSGUk/hqdefault.jpg" alt="Thumbnail"
+                                class="w-full h-full object-cover rounded-lg">
+
                             <!-- Ikon Play di tengah -->
                             <div class="absolute inset-0 flex items-center justify-center">
-                                <div class="w-16 h-16 bg-red-600 rounded-xl flex items-center justify-center shadow-lg hover:bg-red-700 transition">
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-6 h-6 text-white fill-current">
-                                    <path d="M8 5v14l11-7z"/>
+                                <div
+                                    class="w-16 h-16 bg-red-600 rounded-xl flex items-center justify-center shadow-lg hover:bg-red-700 transition">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                                        class="w-6 h-6 text-white fill-current">
+                                        <path d="M8 5v14l11-7z" />
                                     </svg>
                                 </div>
                             </div>
@@ -143,7 +147,8 @@
                                         <img src="https://img.youtube.com/vi/EoRrJaGSGUk/hqdefault.jpg" alt="Thumbnail"
                                             class="w-full h-full object-cover">
                                     </div>
-                                    <a href="https://www.youtube.com/watch?v=EoRrJaGSGUk" target="_blank" class="hover:underline">Kajian
+                                    <a href="https://www.youtube.com/watch?v=EoRrJaGSGUk" target="_blank"
+                                        class="hover:underline">Kajian
                                         Tafsir Al-Qur'an - Ustadz Ahmad</a>
                                 </div>
                             </li>
@@ -153,7 +158,8 @@
                                         <img src="https://img.youtube.com/vi/3JZ_D3ELwOQ/hqdefault.jpg" alt="Thumbnail"
                                             class="w-full h-full object-cover">
                                     </div>
-                                    <a href="https://www.youtube.com/watch?v=3JZ_D3ELwOQ" target="_blank" class="hover:underline">Ceramah
+                                    <a href="https://www.youtube.com/watch?v=3JZ_D3ELwOQ" target="_blank"
+                                        class="hover:underline">Ceramah
                                         Jumat - Ustadz Budi</a>
                                 </div>
                             </li>
@@ -163,7 +169,8 @@
                                         <img src="https://img.youtube.com/vi/LsoLEjrDogU/hqdefault.jpg" alt="Thumbnail"
                                             class="w-full h-full object-cover">
                                     </div>
-                                    <a href="https://www.youtube.com/watch?v=LsoLEjrDogU" target="_blank" class="hover:underline">Acara
+                                    <a href="https://www.youtube.com/watch?v=LsoLEjrDogU" target="_blank"
+                                        class="hover:underline">Acara
                                         Bakti Sosial Masjid Darul Muflihin NTI</a>
                                 </div>
                             </li>
